Bug 263801 Hang when importing invalid address book (csv file) patch by mark@standard8.demon.co.uk r=bienvenu sr=mscott