mailnews/import/text/src/nsTextAddress.h
@@ -75,7 +75,7 @@ public:
 private:
 	nsresult		ProcessLine( const char *pLine, PRInt32 len, nsString& errors);
 	
-	static PRBool		IsLineComplete( const char *pLine, PRInt32 len, char delim);
+	static PRBool		IsLineComplete( const char *pLine, PRInt32 len);
 	static PRInt32		CountFields( const char *pLine, PRInt32 maxLen, char delim);
 	static void			SanitizeSingleLine( nsCString& val);
 
